# GNU-R-Q-Manifolds-2.0.1

./: .RData  .Rhistory  .anjuta_sym_db.db  README  README.md  TensorsC++LibraryforTensorAlgebra.html  configure.ac
.Rproj.user/EF828B96/pcs/: files-pane.pper
.Rproj.user/EF828B96/sources/per/t/: 3B4E2AD9  3B4E2AD9-contents
.Rproj.user/EF828B96/sources/prop/: INDEX
.Rproj.user/shared/notebooks/: paths
.anjuta/session/: anjuta.session  dock-layout.xml
TensorsC++LibraryforTensorAlgebra_files/: godocs.js  mycode.js  style.css
matrix/gnu/lib/: renv.tar.xz
src/: Makefile.am  main.cc
